# metaclaude

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  change_to_dagger.md  flow.md  metaclaude.py  pyproject.toml  run_metaclaude.py  state-of-art.md  test_agentic.py  understanding.md
.github/workflows/: test.yml
docker/: .dockerignore  Dockerfile
examples/: README.md
metaclaude/: __init__.py  cli.py
metaclaude/agents/: __init__.py  agentic_creator.py  agentic_orchestrator.py  claude_agent_creator.py  claude_agentic_integration.py  natural_claude_creator.py  parser.py  selector.py  templates.py
metaclaude/config/: __init__.py  manager.py  models.py
metaclaude/core/: __init__.py  analyzer.py  orchestrator.py
metaclaude/docker/: __init__.py  manager.py
metaclaude/mcp/: __init__.py  manager.py
metaclaude/templates/: __init__.py  manager.py
metaclaude/utils/: __init__.py  errors.py  filesystem.py  logging.py
templates/.claude/: CLAUDE.md  mcp.json  settings.json
templates/.claude/agents/: devops-engineer.md  fullstack-engineer.md  ml-dl-engineer.md  qa-engineer.md
tests/: test_cli.py
